# spaceship_in_cpp

./: .gitignore  CMakeLists.txt  README.md  scan_compare_stdout.txt
apps/: performance_benchmark.cpp  problem1_profile.cpp  problem1_scan_compare.cpp  problem1_solve_diagnostics.cpp  problem1_table_diagnostics.cpp  trajectory_search.cpp
docs/: README.md  route_a_final_design.md
docs/en/: README.md  bfs_search.md  code_structure.md  earth_to_mercury.md  problem1_solver_status.md
docs/zh/: README.md  bfs_search.md  code_structure.md  earth_to_mercury.md  problem1_solver_status.md  problem2_theory.md
include/spaceship_cpp/bfs/: bfs.hpp  fixed_launch_theta_search.hpp  fixed_launch_time_theta_scan.hpp  fixed_sequence_bfs.hpp  fixed_sequence_launch_time_scan.hpp  fixed_sequence_theta_refinement.hpp  fixed_sequence_theta_scan.hpp  fixed_sequence_theta_search.hpp  free_path_bfs.hpp  gravity_assist_step_expansion.hpp  initial_launch_expansion.hpp  leg0_theta_feasibility.hpp  problem2_angle_frame_adapter.hpp  problem2_branch_profile.hpp  step3_top_k_sequences.hpp  step4_fixed_sequence_fine_search.hpp  theta_candidate_selector.hpp  theta_launch_feasibility_scout.hpp  trajectory_search_config.hpp  trajectory_search_state.hpp  trajectory_solution.hpp
include/spaceship_cpp/common/: common.hpp  orbit_math.hpp  time_utils.hpp
include/spaceship_cpp/config/: global_config.hpp
include/spaceship_cpp/core_types/: core_types.hpp
include/spaceship_cpp/planet_params/: planet_params.hpp
include/spaceship_cpp/problem1/: orbit_time_integral.hpp  problem1.hpp  problem1_diagnostics.hpp  problem1_root_table.hpp  (+3 more)
spaceship/doc/: README.md  code_theory_framework.md  problem1_solver_status.md  problem2_theory.md
src/bfs/: bfs.cpp  fixed_launch_theta_search.cpp  fixed_launch_time_theta_scan.cpp  fixed_sequence_bfs.cpp  fixed_sequence_launch_time_scan.cpp  fixed_sequence_theta_refinement.cpp  fixed_sequence_theta_scan.cpp  fixed_sequence_theta_search.cpp  free_path_bfs.cpp  gravity_assist_step_expansion.cpp  initial_launch_expansion.cpp  leg0_theta_feasibility.cpp  step3_top_k_sequences.cpp  step4_fixed_sequence_fine_search.cpp  theta_candidate_selector.cpp  theta_launch_feasibility_scout.cpp  trajectory_search_config.cpp
src/common/: common.cpp  orbit_math.cpp  time_utils.cpp
src/config/: global_config.cpp
src/core_types/: core_types.cpp
src/planet_params/: planet_params.cpp
src/problem1/: problem1.cpp  problem1_root_table.cpp  problem1_root_table_2deg_loader.cpp  problem1_root_table_nearest_node_query.cpp  problem1_table.cpp
src/problem2/: problem2.cpp  problem2_gravity_assist_expansion.cpp  problem2_gravity_assist_solver.cpp  problem2_gravity_assist_transition.cpp  problem2_slingshot.cpp
src/trajectory/: flyby_physics.cpp  orbit_velocity.cpp
tests/: CMakeLists.txt  README.md  problem1_5deg_test_utils.hpp  test_bfs_expansion_attempt_profile.cpp  test_bfs_fixed_launch_theta_search.cpp  test_bfs_fixed_launch_time_theta_scan.cpp  test_bfs_fixed_sequence_launch_time_scan.cpp  test_bfs_fixed_sequence_problem2_branch_profile.cpp  test_bfs_fixed_sequence_theta_refinement.cpp  test_bfs_fixed_sequence_theta_scan.cpp  test_bfs_flyby_filter_audit.cpp  test_bfs_gravity_assist_step_expansion.cpp  test_bfs_initial_launch_expansion.cpp  test_bfs_open_search_depth_width_with_flyby_filter.cpp  test_bfs_open_search_physical_theta_scan.cpp  test_bfs_physical_launch_window_scan.cpp  test_bfs_physical_local_refinement.cpp  test_bfs_physical_no_beam_depth_profile.cpp  test_bfs_physical_search_depth_kq_sensitivity.cpp  test_bfs_theta_candidate_selector.cpp  test_bfs_theta_launch_feasibility_scout.cpp  test_build.cpp  test_flyby_physical_feasibility.cpp  test_global_config.cpp  test_orbit_time_integral.cpp  test_orbit_velocity_helpers.cpp  test_planet_params.cpp  test_planet_position.cpp  test_problem1_5deg_branch_boundary_stress.cpp  test_problem1_5deg_nearest_sensitivity.cpp  test_problem1_5deg_speed_breakdown.cpp  test_problem1_branch_derivative_taylor_validation.cpp  test_problem1_cell_vertex_routeA_scout_fallback.cpp  test_problem1_derivative_small_table_regeneration.cpp  test_problem1_derivative_source_audit.cpp  test_problem1_nearest_node_query_profile.cpp  test_problem1_residual.cpp  test_problem1_root_derivative_audit.cpp  test_problem1_root_derivative_fallback.cpp  test_problem1_root_derivatives.cpp  (+72 more)
tests/bfs/: CMakeLists.txt  test_bfs_search_best_trajectory.cpp  test_fixed_sequence_bfs.cpp  test_free_path_bfs.cpp  test_free_path_bfs_p2_branching.cpp  test_leg0_theta_feasibility.cpp  test_mercury_reachability.cpp  test_problem2_random_timing.cpp  test_problem2_solve_timing.cpp  test_step2_profiling.cpp  test_step3_top_k_sequences.cpp  test_step4_fixed_sequence_fine_search.cpp  test_trajectory_search_config.cpp  test_trajectory_search_pipeline_timing.cpp
tests/common/: CMakeLists.txt  test_orbit_time_integral.cpp  test_time_utils.cpp
tests/config/: CMakeLists.txt  test_global_config.cpp
tests/planet_params/: CMakeLists.txt
tests/problem1/: CMakeLists.txt  test_problem1_phi_search.cpp  test_problem1_quadratic_extremum.cpp  test_problem1_residual_derivative.cpp  test_problem1_solve.cpp  test_problem1_table_diagnostics.cpp
tests/problem2/: CMakeLists.txt  test_problem2_G_quadratic_roots.cpp  test_problem2_case_c_middle.cpp  test_problem2_flyby_F_derivatives.cpp  test_problem2_flyby_G_derivative.cpp  test_problem2_flyby_G_search.cpp  test_problem2_flyby_constraint.cpp  test_problem2_flyby_solve.cpp  test_problem2_flyby_solve_physical.cpp  test_problem2_flyby_solve_timing.cpp  test_problem2_route_a.cpp  test_problem2_route_a_q_adjustment.cpp  test_problem2_theta_prime_derivative.cpp  test_problem2_theta_prime_k_grouping.cpp
tests/trajectory/: CMakeLists.txt
tools/: build_problem1_root_table_2deg.cpp  patch_problem1_root_table_2deg_derivative_failures.cpp  scan_problem1_root_table_2deg_derivative_failures.cpp  validate_problem1_root_table_2deg_chunk.cpp
visualization/: README.md
visualization/python/: plot_trajectory.py
visualization/src/: trajectory_plotter.cpp
(+22 files in other folders)
