add_executable(test_build test_build.cpp)
target_link_libraries(test_build PRIVATE spaceship_cpp)
add_test(NAME test_build COMMAND $<TARGET_FILE:test_build>)

add_executable(test_orbit_time_integral test_orbit_time_integral.cpp)
target_link_libraries(test_orbit_time_integral PRIVATE spaceship_cpp)
add_test(NAME test_orbit_time_integral COMMAND $<TARGET_FILE:test_orbit_time_integral>)

add_executable(test_planet_params test_planet_params.cpp)
target_link_libraries(test_planet_params PRIVATE spaceship_cpp)
add_test(NAME test_planet_params COMMAND $<TARGET_FILE:test_planet_params>)

add_executable(test_time_utils test_time_utils.cpp)
target_link_libraries(test_time_utils PRIVATE spaceship_cpp)
add_test(NAME test_time_utils COMMAND $<TARGET_FILE:test_time_utils>)

add_executable(test_planet_position test_planet_position.cpp)
target_link_libraries(test_planet_position PRIVATE spaceship_cpp)
add_test(NAME test_planet_position COMMAND $<TARGET_FILE:test_planet_position>)

add_executable(test_problem1_residual test_problem1_residual.cpp)
target_link_libraries(test_problem1_residual PRIVATE spaceship_cpp)
add_test(NAME test_problem1_residual COMMAND $<TARGET_FILE:test_problem1_residual>)

add_executable(test_problem1_solve test_problem1_solve.cpp)
target_link_libraries(test_problem1_solve PRIVATE spaceship_cpp)
add_test(NAME test_problem1_solve COMMAND $<TARGET_FILE:test_problem1_solve>)

add_executable(test_problem1_table test_problem1_table.cpp)
target_link_libraries(test_problem1_table PRIVATE spaceship_cpp)
add_test(NAME test_problem1_table COMMAND $<TARGET_FILE:test_problem1_table>)

add_executable(test_problem1_table_theory test_problem1_table_theory.cpp)
target_link_libraries(test_problem1_table_theory PRIVATE spaceship_cpp)
add_test(NAME test_problem1_table_theory COMMAND $<TARGET_FILE:test_problem1_table_theory>)

add_executable(test_problem1_table_diagnostics test_problem1_table_diagnostics.cpp)
target_link_libraries(test_problem1_table_diagnostics PRIVATE spaceship_cpp)
add_test(NAME test_problem1_table_diagnostics COMMAND $<TARGET_FILE:test_problem1_table_diagnostics>)

add_executable(test_global_config test_global_config.cpp)
target_link_libraries(test_global_config PRIVATE spaceship_cpp)
add_test(NAME test_global_config COMMAND $<TARGET_FILE:test_global_config>)

add_executable(test_problem1_table_documentation test_problem1_table_documentation.cpp)
target_link_libraries(test_problem1_table_documentation PRIVATE spaceship_cpp)
add_test(NAME test_problem1_table_documentation COMMAND $<TARGET_FILE:test_problem1_table_documentation>)

add_executable(test_problem1_root_table test_problem1_root_table.cpp)
target_link_libraries(test_problem1_root_table PRIVATE spaceship_cpp)
add_test(NAME test_problem1_root_table COMMAND $<TARGET_FILE:test_problem1_root_table>)

add_executable(test_problem1_root_derivatives test_problem1_root_derivatives.cpp)
target_link_libraries(test_problem1_root_derivatives PRIVATE spaceship_cpp)
add_test(NAME test_problem1_root_derivatives COMMAND $<TARGET_FILE:test_problem1_root_derivatives>)

add_executable(test_problem1_root_derivative_audit test_problem1_root_derivative_audit.cpp)
target_link_libraries(test_problem1_root_derivative_audit PRIVATE spaceship_cpp)
add_test(NAME test_problem1_root_derivative_audit COMMAND $<TARGET_FILE:test_problem1_root_derivative_audit>)

add_executable(test_problem1_root_derivative_fallback test_problem1_root_derivative_fallback.cpp)
target_link_libraries(test_problem1_root_derivative_fallback PRIVATE spaceship_cpp)
add_test(NAME test_problem1_root_derivative_fallback COMMAND $<TARGET_FILE:test_problem1_root_derivative_fallback>)

add_executable(test_problem1_root_refinement test_problem1_root_refinement.cpp)
target_link_libraries(test_problem1_root_refinement PRIVATE spaceship_cpp)
add_test(NAME test_problem1_root_refinement COMMAND $<TARGET_FILE:test_problem1_root_refinement>)

add_executable(test_problem1_root_newton_diagnostic test_problem1_root_newton_diagnostic.cpp)
target_link_libraries(test_problem1_root_newton_diagnostic PRIVATE spaceship_cpp)
add_test(NAME test_problem1_root_newton_diagnostic COMMAND $<TARGET_FILE:test_problem1_root_newton_diagnostic>)

add_executable(test_problem1_root_table_query test_problem1_root_table_query.cpp)
target_link_libraries(test_problem1_root_table_query PRIVATE spaceship_cpp)
add_test(NAME test_problem1_root_table_query COMMAND $<TARGET_FILE:test_problem1_root_table_query>)

add_executable(test_problem1_root_table_query_accuracy test_problem1_root_table_query_accuracy.cpp)
target_link_libraries(test_problem1_root_table_query_accuracy PRIVATE spaceship_cpp)
add_test(NAME test_problem1_root_table_query_accuracy COMMAND $<TARGET_FILE:test_problem1_root_table_query_accuracy>)

add_executable(test_problem1_root_table_resolution_sweep test_problem1_root_table_resolution_sweep.cpp)
target_link_libraries(test_problem1_root_table_resolution_sweep PRIVATE spaceship_cpp)
add_test(NAME test_problem1_root_table_resolution_sweep COMMAND $<TARGET_FILE:test_problem1_root_table_resolution_sweep>)

add_executable(test_problem1_root_table_virtual_2deg test_problem1_root_table_virtual_2deg.cpp)
target_link_libraries(test_problem1_root_table_virtual_2deg PRIVATE spaceship_cpp)
add_test(NAME test_problem1_root_table_virtual_2deg COMMAND $<TARGET_FILE:test_problem1_root_table_virtual_2deg>)

add_executable(test_problem1_root_table_virtual_2deg_debug test_problem1_root_table_virtual_2deg_debug.cpp)
target_link_libraries(test_problem1_root_table_virtual_2deg_debug PRIVATE spaceship_cpp)

add_executable(test_problem1_root_table_virtual_2deg_newton_rescue test_problem1_root_table_virtual_2deg_newton_rescue.cpp)
target_link_libraries(test_problem1_root_table_virtual_2deg_newton_rescue PRIVATE spaceship_cpp)

add_executable(test_problem1_root_table_virtual_2deg_tolerance_sweep test_problem1_root_table_virtual_2deg_tolerance_sweep.cpp)
target_link_libraries(test_problem1_root_table_virtual_2deg_tolerance_sweep PRIVATE spaceship_cpp)

add_executable(test_problem1_root_table_virtual_2deg_prod_vs_testonly test_problem1_root_table_virtual_2deg_prod_vs_testonly.cpp)
target_link_libraries(test_problem1_root_table_virtual_2deg_prod_vs_testonly PRIVATE spaceship_cpp)

add_executable(test_problem1_root_table_virtual_2deg_midcell_fail_debug test_problem1_root_table_virtual_2deg_midcell_fail_debug.cpp)
target_link_libraries(test_problem1_root_table_virtual_2deg_midcell_fail_debug PRIVATE spaceship_cpp)

add_executable(test_problem1_root_table_virtual_2deg_midcell_branch_admissibility_debug test_problem1_root_table_virtual_2deg_midcell_branch_admissibility_debug.cpp)
target_link_libraries(test_problem1_root_table_virtual_2deg_midcell_branch_admissibility_debug PRIVATE spaceship_cpp)

add_executable(test_problem1_root_table_virtual_2deg_sample3_k0_debug test_problem1_root_table_virtual_2deg_sample3_k0_debug.cpp)
target_link_libraries(test_problem1_root_table_virtual_2deg_sample3_k0_debug PRIVATE spaceship_cpp)

add_executable(test_problem1_root_table_2deg_build_cost_estimate test_problem1_root_table_2deg_build_cost_estimate.cpp)
target_link_libraries(test_problem1_root_table_2deg_build_cost_estimate PRIVATE spaceship_cpp)

add_executable(test_problem1_root_table_5deg_mode_stats test_problem1_root_table_5deg_mode_stats.cpp)
target_link_libraries(test_problem1_root_table_5deg_mode_stats PRIVATE spaceship_cpp)

add_executable(test_problem1_root_table_5deg_accuracy_vs_direct test_problem1_root_table_5deg_accuracy_vs_direct.cpp)
target_link_libraries(test_problem1_root_table_5deg_accuracy_vs_direct PRIVATE spaceship_cpp)

add_executable(test_problem1_5deg_nearest_sensitivity test_problem1_5deg_nearest_sensitivity.cpp)
target_link_libraries(test_problem1_5deg_nearest_sensitivity PRIVATE spaceship_cpp)

add_executable(test_problem1_5deg_branch_boundary_stress test_problem1_5deg_branch_boundary_stress.cpp)
target_link_libraries(test_problem1_5deg_branch_boundary_stress PRIVATE spaceship_cpp)

add_executable(test_problem1_5deg_speed_breakdown test_problem1_5deg_speed_breakdown.cpp)
target_link_libraries(test_problem1_5deg_speed_breakdown PRIVATE spaceship_cpp)

add_executable(test_problem1_solve_profile_breakdown test_problem1_solve_profile_breakdown.cpp)
target_link_libraries(test_problem1_solve_profile_breakdown PRIVATE spaceship_cpp)

add_executable(test_problem1_solve_mode_fullscan_equivalence test_problem1_solve_mode_fullscan_equivalence.cpp)
target_link_libraries(test_problem1_solve_mode_fullscan_equivalence PRIVATE spaceship_cpp)

add_executable(test_problem1_solve_mode_debug_compare_placeholder test_problem1_solve_mode_debug_compare_placeholder.cpp)
target_link_libraries(test_problem1_solve_mode_debug_compare_placeholder PRIVATE spaceship_cpp)

add_executable(test_problem1_root_table_2deg_loader test_problem1_root_table_2deg_loader.cpp)
target_link_libraries(test_problem1_root_table_2deg_loader PRIVATE spaceship_cpp)

add_executable(test_problem1_root_table_2deg_loader_performance test_problem1_root_table_2deg_loader_performance.cpp)
target_link_libraries(test_problem1_root_table_2deg_loader_performance PRIVATE spaceship_cpp)

add_executable(test_problem1_root_table_2deg_nearest_node_query test_problem1_root_table_2deg_nearest_node_query.cpp)
target_link_libraries(test_problem1_root_table_2deg_nearest_node_query PRIVATE spaceship_cpp)

add_executable(test_problem1_nearest_node_query_profile test_problem1_nearest_node_query_profile.cpp)
target_link_libraries(test_problem1_nearest_node_query_profile PRIVATE spaceship_cpp)

add_executable(test_problem1_root_table_cell_admissibility test_problem1_root_table_cell_admissibility.cpp)
target_link_libraries(test_problem1_root_table_cell_admissibility PRIVATE spaceship_cpp)

add_executable(test_problem1_root_table_route_b_safety test_problem1_root_table_route_b_safety.cpp)
target_link_libraries(test_problem1_root_table_route_b_safety PRIVATE spaceship_cpp)

add_executable(test_problem1_root_table_route_b_linear_safety test_problem1_root_table_route_b_linear_safety.cpp)
target_link_libraries(test_problem1_root_table_route_b_linear_safety PRIVATE spaceship_cpp)

add_executable(test_problem1_root_table_route_b_compare test_problem1_root_table_route_b_compare.cpp)
target_link_libraries(test_problem1_root_table_route_b_compare PRIVATE spaceship_cpp)

add_executable(test_problem1_root_table_route_b_quadratic_hessian_debug test_problem1_root_table_route_b_quadratic_hessian_debug.cpp)
target_link_libraries(test_problem1_root_table_route_b_quadratic_hessian_debug PRIVATE spaceship_cpp)

add_executable(test_problem1_root_table_route_b_quadratic_one_step_compare test_problem1_root_table_route_b_quadratic_one_step_compare.cpp)
target_link_libraries(test_problem1_root_table_route_b_quadratic_one_step_compare PRIVATE spaceship_cpp)

add_executable(test_problem1_root_table_route_b_one_step_branch_debug test_problem1_root_table_route_b_one_step_branch_debug.cpp)
target_link_libraries(test_problem1_root_table_route_b_one_step_branch_debug PRIVATE spaceship_cpp)

add_executable(test_problem1_root_table_route_b_vs_route_a_source_aligned_compare test_problem1_root_table_route_b_vs_route_a_source_aligned_compare.cpp)
target_link_libraries(test_problem1_root_table_route_b_vs_route_a_source_aligned_compare PRIVATE spaceship_cpp)

add_executable(test_problem1_root_table_route_b_vs_route_a_source_aligned_step_sweep test_problem1_root_table_route_b_vs_route_a_source_aligned_step_sweep.cpp)
target_link_libraries(test_problem1_root_table_route_b_vs_route_a_source_aligned_step_sweep PRIVATE spaceship_cpp)

add_executable(test_problem1_root_table_route_b_distance_residual_diagnostic test_problem1_root_table_route_b_distance_residual_diagnostic.cpp)
target_link_libraries(test_problem1_root_table_route_b_distance_residual_diagnostic PRIVATE spaceship_cpp)

add_executable(test_problem1_root_table_route_b_projected_stencil_compare test_problem1_root_table_route_b_projected_stencil_compare.cpp)
target_link_libraries(test_problem1_root_table_route_b_projected_stencil_compare PRIVATE spaceship_cpp)

add_executable(test_problem1_root_table_route_b_projected_stencil_production test_problem1_root_table_route_b_projected_stencil_production.cpp)
target_link_libraries(test_problem1_root_table_route_b_projected_stencil_production PRIVATE spaceship_cpp)

add_executable(test_problem1_root_table_route_b_projected_default test_problem1_root_table_route_b_projected_default.cpp)
target_link_libraries(test_problem1_root_table_route_b_projected_default PRIVATE spaceship_cpp)

add_executable(test_problem1_root_table_route_b_projected_with_route_a_fallback_compare test_problem1_root_table_route_b_projected_with_route_a_fallback_compare.cpp)
target_link_libraries(test_problem1_root_table_route_b_projected_with_route_a_fallback_compare PRIVATE spaceship_cpp)

add_executable(test_problem1_root_table_route_b_projected_timing_breakdown test_problem1_root_table_route_b_projected_timing_breakdown.cpp)
target_link_libraries(test_problem1_root_table_route_b_projected_timing_breakdown PRIVATE spaceship_cpp)

add_executable(test_problem2_slingshot_equations test_problem2_slingshot_equations.cpp)
target_link_libraries(test_problem2_slingshot_equations PRIVATE spaceship_cpp)
add_test(NAME test_problem2_slingshot_equations COMMAND $<TARGET_FILE:test_problem2_slingshot_equations>)

add_executable(test_problem2_slingshot_residual_branches_route_a test_problem2_slingshot_residual_branches_route_a.cpp)
target_link_libraries(test_problem2_slingshot_residual_branches_route_a PRIVATE spaceship_cpp)
add_test(NAME test_problem2_slingshot_residual_branches_route_a COMMAND $<TARGET_FILE:test_problem2_slingshot_residual_branches_route_a>)

add_executable(test_problem2_theta_prime_branch_count_diagnostic test_problem2_theta_prime_branch_count_diagnostic.cpp)
target_link_libraries(test_problem2_theta_prime_branch_count_diagnostic PRIVATE spaceship_cpp)
add_test(NAME test_problem2_theta_prime_branch_count_diagnostic COMMAND $<TARGET_FILE:test_problem2_theta_prime_branch_count_diagnostic>)

add_executable(test_problem2_theta_prime_residual_branches_nearest_node_table test_problem2_theta_prime_residual_branches_nearest_node_table.cpp)
target_link_libraries(test_problem2_theta_prime_residual_branches_nearest_node_table PRIVATE spaceship_cpp)

add_executable(test_problem2_theta_prime_branch_count_diagnostic_nearest_node_table test_problem2_theta_prime_branch_count_diagnostic_nearest_node_table.cpp)
target_link_libraries(test_problem2_theta_prime_branch_count_diagnostic_nearest_node_table PRIVATE spaceship_cpp)

add_executable(test_problem2_theta_prime_branch_count_direct_vs_table_diff test_problem2_theta_prime_branch_count_direct_vs_table_diff.cpp)
target_link_libraries(test_problem2_theta_prime_branch_count_direct_vs_table_diff PRIVATE spaceship_cpp)

add_executable(test_problem2_theta_prime_slingshot_validity_boundary_diagnostic test_problem2_theta_prime_slingshot_validity_boundary_diagnostic.cpp)
target_link_libraries(test_problem2_theta_prime_slingshot_validity_boundary_diagnostic PRIVATE spaceship_cpp)

add_executable(test_problem2_theta_prime_continuation_candidate_diagnostic_nearest_node_table test_problem2_theta_prime_continuation_candidate_diagnostic_nearest_node_table.cpp)
target_link_libraries(test_problem2_theta_prime_continuation_candidate_diagnostic_nearest_node_table PRIVATE spaceship_cpp)

add_executable(test_problem2_theta_prime_bisection_nearest_node_table test_problem2_theta_prime_continuation_candidate_diagnostic_nearest_node_table.cpp)
target_compile_definitions(test_problem2_theta_prime_bisection_nearest_node_table PRIVATE PROBLEM2_THETA_PRIME_BISECTION_DIAGNOSTIC)
target_link_libraries(test_problem2_theta_prime_bisection_nearest_node_table PRIVATE spaceship_cpp)

add_executable(test_problem2_theta_prime_bisection_root_validation_nearest_node_table test_problem2_theta_prime_continuation_candidate_diagnostic_nearest_node_table.cpp)
target_compile_definitions(test_problem2_theta_prime_bisection_root_validation_nearest_node_table PRIVATE PROBLEM2_THETA_PRIME_ROOT_VALIDATION_DIAGNOSTIC)
target_link_libraries(test_problem2_theta_prime_bisection_root_validation_nearest_node_table PRIVATE spaceship_cpp)

add_executable(test_problem2_gravity_assist_solver_nearest_node_table test_problem2_gravity_assist_solver_nearest_node_table.cpp)
target_link_libraries(test_problem2_gravity_assist_solver_nearest_node_table PRIVATE spaceship_cpp)

add_executable(test_problem2_gravity_assist_solver_profile test_problem2_gravity_assist_solver_profile.cpp)
target_link_libraries(test_problem2_gravity_assist_solver_profile PRIVATE spaceship_cpp)

add_executable(test_problem2_gravity_assist_solver_repeated_profile test_problem2_gravity_assist_solver_repeated_profile.cpp)
target_link_libraries(test_problem2_gravity_assist_solver_repeated_profile PRIVATE spaceship_cpp)

add_executable(test_problem2_efficiency_ablation test_problem2_efficiency_ablation.cpp)
target_link_libraries(test_problem2_efficiency_ablation PRIVATE spaceship_cpp)

add_executable(test_problem2_adaptive_interval_audit test_problem2_adaptive_interval_audit.cpp)
target_link_libraries(test_problem2_adaptive_interval_audit PRIVATE spaceship_cpp)

add_executable(test_problem2_midpoint_routeA_ablation test_problem2_midpoint_routeA_ablation.cpp)
target_link_libraries(test_problem2_midpoint_routeA_ablation PRIVATE spaceship_cpp)

add_executable(test_problem2_midpoint_cost_profile test_problem2_midpoint_cost_profile.cpp)
target_link_libraries(test_problem2_midpoint_cost_profile PRIVATE spaceship_cpp)

add_executable(test_problem2_initial_sample_solver_vs_table test_problem2_initial_sample_solver_vs_table.cpp)
target_link_libraries(test_problem2_initial_sample_solver_vs_table PRIVATE spaceship_cpp)

add_executable(test_problem2_problem1_direct_seed_mode test_problem2_problem1_direct_seed_mode.cpp)
target_link_libraries(test_problem2_problem1_direct_seed_mode PRIVATE spaceship_cpp)

add_executable(test_problem1_cell_vertex_routeA_scout_fallback test_problem1_cell_vertex_routeA_scout_fallback.cpp)
target_link_libraries(test_problem1_cell_vertex_routeA_scout_fallback PRIVATE spaceship_cpp)

add_executable(test_problem1_scout_query_recall_rate test_problem1_scout_query_recall_rate.cpp)
target_link_libraries(test_problem1_scout_query_recall_rate PRIVATE spaceship_cpp)

add_executable(test_problem1_scout_query_recall_rate_exhaustive8_sampled test_problem1_scout_query_recall_rate_exhaustive8_sampled.cpp)
target_link_libraries(test_problem1_scout_query_recall_rate_exhaustive8_sampled PRIVATE spaceship_cpp)

add_executable(test_problem1_branch_derivative_taylor_validation test_problem1_branch_derivative_taylor_validation.cpp)
target_link_libraries(test_problem1_branch_derivative_taylor_validation PRIVATE spaceship_cpp)

add_executable(test_problem1_derivative_source_audit test_problem1_derivative_source_audit.cpp)
target_link_libraries(test_problem1_derivative_source_audit PRIVATE spaceship_cpp)

add_executable(test_problem1_derivative_small_table_regeneration test_problem1_derivative_small_table_regeneration.cpp)
target_link_libraries(test_problem1_derivative_small_table_regeneration PRIVATE spaceship_cpp)

add_executable(test_problem2_gravity_assist_solver_multi_scenario_nearest_node_table test_problem2_gravity_assist_solver_multi_scenario_nearest_node_table.cpp)
target_link_libraries(test_problem2_gravity_assist_solver_multi_scenario_nearest_node_table PRIVATE spaceship_cpp)

add_executable(test_problem2_vinf_conservation_audit test_problem2_vinf_conservation_audit.cpp)
target_link_libraries(test_problem2_vinf_conservation_audit PRIVATE spaceship_cpp)

add_executable(test_problem2_slingshot_residual_definition_audit test_problem2_slingshot_residual_definition_audit.cpp)
target_link_libraries(test_problem2_slingshot_residual_definition_audit PRIVATE spaceship_cpp)

add_executable(test_problem2_angle_frame_adapter_audit test_problem2_angle_frame_adapter_audit.cpp)
target_link_libraries(test_problem2_angle_frame_adapter_audit PRIVATE spaceship_cpp)

add_executable(test_problem2_gravity_assist_solver_scenario2_adaptive_new_roots test_problem2_gravity_assist_solver_scenario2_adaptive_new_roots.cpp)
target_link_libraries(test_problem2_gravity_assist_solver_scenario2_adaptive_new_roots PRIVATE spaceship_cpp)

add_executable(test_problem2_gravity_assist_transition_nearest_node_table test_problem2_gravity_assist_transition_nearest_node_table.cpp)
target_link_libraries(test_problem2_gravity_assist_transition_nearest_node_table PRIVATE spaceship_cpp)

add_executable(test_problem2_gravity_assist_expansion_nearest_node_table test_problem2_gravity_assist_expansion_nearest_node_table.cpp)
target_link_libraries(test_problem2_gravity_assist_expansion_nearest_node_table PRIVATE spaceship_cpp)

add_executable(test_bfs_gravity_assist_step_expansion test_bfs_gravity_assist_step_expansion.cpp)
target_link_libraries(test_bfs_gravity_assist_step_expansion PRIVATE spaceship_cpp)

add_executable(test_orbit_velocity_helpers test_orbit_velocity_helpers.cpp)
target_link_libraries(test_orbit_velocity_helpers PRIVATE spaceship_cpp)

add_executable(test_flyby_physical_feasibility test_flyby_physical_feasibility.cpp)
target_link_libraries(test_flyby_physical_feasibility PRIVATE spaceship_cpp)

add_executable(test_bfs_flyby_filter_audit test_bfs_flyby_filter_audit.cpp)
target_link_libraries(test_bfs_flyby_filter_audit PRIVATE spaceship_cpp)

add_executable(test_bfs_initial_launch_expansion test_bfs_initial_launch_expansion.cpp)
target_link_libraries(test_bfs_initial_launch_expansion PRIVATE spaceship_cpp)

add_executable(test_bfs_theta_launch_feasibility_scout test_bfs_theta_launch_feasibility_scout.cpp)
target_link_libraries(test_bfs_theta_launch_feasibility_scout PRIVATE spaceship_cpp)

add_executable(test_bfs_theta_candidate_selector test_bfs_theta_candidate_selector.cpp)
target_link_libraries(test_bfs_theta_candidate_selector PRIVATE spaceship_cpp)

add_executable(test_bfs_fixed_launch_theta_search test_bfs_fixed_launch_theta_search.cpp)
target_link_libraries(test_bfs_fixed_launch_theta_search PRIVATE spaceship_cpp)

add_executable(test_bfs_fixed_launch_time_theta_scan test_bfs_fixed_launch_time_theta_scan.cpp)
target_link_libraries(test_bfs_fixed_launch_time_theta_scan PRIVATE spaceship_cpp)

add_executable(test_bfs_open_search_depth_width_with_flyby_filter test_bfs_open_search_depth_width_with_flyby_filter.cpp)
target_link_libraries(test_bfs_open_search_depth_width_with_flyby_filter PRIVATE spaceship_cpp)

add_executable(test_bfs_open_search_physical_theta_scan test_bfs_open_search_physical_theta_scan.cpp)
target_link_libraries(test_bfs_open_search_physical_theta_scan PRIVATE spaceship_cpp)

add_executable(test_bfs_physical_search_depth_kq_sensitivity test_bfs_physical_search_depth_kq_sensitivity.cpp)
target_link_libraries(test_bfs_physical_search_depth_kq_sensitivity PRIVATE spaceship_cpp)

add_executable(test_bfs_physical_launch_window_scan test_bfs_physical_launch_window_scan.cpp)
target_link_libraries(test_bfs_physical_launch_window_scan PRIVATE spaceship_cpp)

add_executable(test_bfs_physical_no_beam_depth_profile test_bfs_physical_no_beam_depth_profile.cpp)
target_link_libraries(test_bfs_physical_no_beam_depth_profile PRIVATE spaceship_cpp)

add_executable(test_bfs_expansion_attempt_profile test_bfs_expansion_attempt_profile.cpp)
target_link_libraries(test_bfs_expansion_attempt_profile PRIVATE spaceship_cpp)

add_executable(test_bfs_physical_local_refinement test_bfs_physical_local_refinement.cpp)
target_link_libraries(test_bfs_physical_local_refinement PRIVATE spaceship_cpp)

add_executable(test_bfs_fixed_sequence_theta_scan test_bfs_fixed_sequence_theta_scan.cpp)
target_link_libraries(test_bfs_fixed_sequence_theta_scan PRIVATE spaceship_cpp)

add_executable(test_bfs_fixed_sequence_theta_refinement test_bfs_fixed_sequence_theta_refinement.cpp)
target_link_libraries(test_bfs_fixed_sequence_theta_refinement PRIVATE spaceship_cpp)

add_executable(test_bfs_fixed_sequence_launch_time_scan test_bfs_fixed_sequence_launch_time_scan.cpp)
target_link_libraries(test_bfs_fixed_sequence_launch_time_scan PRIVATE spaceship_cpp)

add_executable(test_bfs_fixed_sequence_problem2_branch_profile test_bfs_fixed_sequence_problem2_branch_profile.cpp)
target_link_libraries(test_bfs_fixed_sequence_problem2_branch_profile PRIVATE spaceship_cpp)

add_executable(test_problem2_stable_branch_bisection_route_a test_problem2_stable_branch_bisection_route_a.cpp)
target_link_libraries(test_problem2_stable_branch_bisection_route_a PRIVATE spaceship_cpp)
add_test(NAME test_problem2_stable_branch_bisection_route_a COMMAND $<TARGET_FILE:test_problem2_stable_branch_bisection_route_a>)

add_executable(test_problem1_solve_performance test_problem1_solve_performance.cpp)
target_link_libraries(test_problem1_solve_performance PRIVATE spaceship_cpp)
add_test(NAME test_problem1_solve_performance COMMAND $<TARGET_FILE:test_problem1_solve_performance>)
