function(add_spaceship_test target source)
    add_executable(${target} ${source})
    target_link_libraries(${target} PRIVATE spaceship_cpp)
    add_test(NAME ${target} COMMAND $<TARGET_FILE:${target}>)
endfunction()

add_spaceship_test(test_build test_build.cpp)
add_spaceship_test(test_orbit_time_integral test_orbit_time_integral.cpp)
add_spaceship_test(test_planet_params test_planet_params.cpp)
add_spaceship_test(test_time_utils test_time_utils.cpp)
add_spaceship_test(test_planet_position test_planet_position.cpp)
add_spaceship_test(test_problem1_residual test_problem1_residual.cpp)
add_spaceship_test(test_problem1_solve test_problem1_solve.cpp)
add_spaceship_test(test_problem1_table test_problem1_table.cpp)
add_spaceship_test(test_problem1_table_theory test_problem1_table_theory.cpp)
add_spaceship_test(test_problem1_table_diagnostics test_problem1_table_diagnostics.cpp)
add_spaceship_test(test_global_config test_global_config.cpp)
add_spaceship_test(test_problem2_slingshot_equations test_problem2_slingshot_equations.cpp)
add_spaceship_test(test_orbit_velocity_helpers test_orbit_velocity_helpers.cpp)
