function(add_spaceship_test target source)
    add_executable(${target} ${source})
    target_link_libraries(${target} PRIVATE spaceship_cpp)
    add_test(NAME ${target} COMMAND $<TARGET_FILE:${target}>)
endfunction()

add_subdirectory(common)
add_subdirectory(config)
add_subdirectory(planet_params)
add_subdirectory(problem1)
add_subdirectory(problem2)
add_subdirectory(trajectory)
